# common_serialization

./: CMakeLists.txt  CSP.txt  CommonConcepts.h  License.txt  ReadMe.md  Status.h  ToDo.txt  csp.txt  errors.h  helpers.h  pch.h
UnitTests/: CMakeLists.txt  FillingSpecialTypes.h  SpecialTypes.h  pch.h  special_types.h
UnitTests/Allocators/: RawKeeperAllocatorTests.cpp
UnitTests/Containers/: VectorTests.cpp  WalkerTests.cpp  special_types.h
UnitTests/ForTestsHelpers/: CMakeLists.txt
UnitTests/ForTestsHelpers/src/: CleanAfterStruct.cpp  FillingStruct.cpp
UnitTests/SerializableStructs/: CMakeLists.txt  pch.h
UnitTests/SerializableStructs/interface_for_test/: ISerializableForTestVersionsScheme.h
UnitTests/Serialization/: SerializationNoFlagsTests.cpp  SerializeNoFlagsTests.cpp
UnitTests/Tests/Allocators/: ConstructorNoexceptAllocatorTests.cpp  RawKeeperAllocatorTests.cpp  RawNoexceptAllocatorTests.cpp  pch.h
UnitTests/Tests/Containers/: UniquePtrTests.cpp  VectorTests.cpp  WalkerTests.cpp  pch.h
UnitTests/Tests/Serialization/: ISerializableAlignmentMayBeNotEqualTests.cpp  ISerializableAllFlagsTests.cpp  ISerializableAllModesTests.cpp  ISerializableAllowUnmanagedPointersTests.cpp  ISerializableAnotherBitness.cpp  ISerializableAnotherEndianness.cpp  ISerializableBasicModeTests.cpp  ISerializableCheckRecursivePointersTests.cpp  ISerializableExtendedPointersProcessing.cpp  ISerializableInterfaceVersionsNotMatchTests.cpp  ISerializableMultiModesTests.cpp  ISerializableNoFlagsTests.cpp  ISerializableSimplyAssignableTagsOptimizationsAreTurnedOff.cpp  ISerializableSizeOfArithmeticTypesMayBeNotEqualTests.cpp  ISerializableSizeOfPrimitivesMayBeNotEqualTests.cpp  MessagingTests.cpp  SerializationAlignmentMayBeNotEqualTests.cpp  SerializationCompatTests.cpp  SerializationInterfaceVersionsNotMatchTests.cpp  SerializationNoFlagsTests.cpp  SerializationSizeOfArithmeticTypesMayBeNotEqualTests.cpp  StdIncludedTests.cpp  pch.h
UnitTests/Tests/csp/: Helpers.h  ISerializableCheckRecursivePointersTests.cpp  ISerializableMultiModesTests.cpp  MessagingTests.cpp  pch.h
UnitTests/TypesForTest/: DeserializeGenerated.h  SerializationForwardDeclarationsGenerated.h  SerializeGenerated.h  SpecialTypes.h  SpecialTypesFilling.h  SpecialTypesSerializable.h  SpecialTypesSerializableLegacy.h  SpecialTypesSerializableVersionConverter.h
UnitTests/TypesForTests/: CMakeLists.txt  SpecialTypes.h  SpecialTypesFilling.cpp  SpecialTypesFilling.h  SpecialTypesFillingStruct.h  SpecialTypesSerializableVersionConverter.h  pch.h
UnitTests/TypesForTests/Include/: TypesForTests.h
UnitTests/TypesForTests/include/: SimpleDataClient.h  SimpleDataServers.h  SpecialTypes.h  SpecialTypesCleanAfterStruct.h  SpecialTypesFillingStruct.h  TypesForTests.h
UnitTests/TypesForTests/src/: SpecialTypesCleanAfterStruct.cpp  SpecialTypesFillingStruct.cpp  SpecialTypesFillingStruct.h
UnitTests/for_tests_helpers/: CMakeLists.txt
UnitTests/for_tests_helpers/src/: CleanAfterStruct.cpp  FillingStruct.cpp
UnitTests/serializable_structs/: CMakeLists.txt
UnitTests/tests/: CMakeLists.txt
UnitTests/tests/containers/: WalkerTests.cpp  pch.h
UnitTests/tests_/containers_/: UniquePtrTests.cpp
allocation_manager_interfaces/: CMakeLists.txt
allocation_managers/: CMakeLists.txt
allocation_managers/unit_tests/: GenericAllocationManagerTests.cpp  StrategicAllocationManagerTests.cpp
allocator_interfaces/: CMakeLists.txt
allocators/: CMakeLists.txt
allocators/unit_tests/: ConstructorNoexceptAllocatorTests.cpp  RawKeeperAllocatorTests.cpp  RawNoexceptAllocatorTests.cpp
common/: CMakeLists.txt
common/unit_tests/: ConceptsTests.cpp  HelpersTests.cpp  StatusTests.cpp  TraitsTests.cpp  UuidTests.cpp
concurrency/: CMakeLists.txt
concurrency_interfaces/: CMakeLists.txt
containers/: CMakeLists.txt
containers/unit_tests/: GenericPointerKeeperTests.cpp  UniquePtrTests.cpp  VectorTests.cpp  WalkerTests.cpp
cslib/: CMakeLists.txt  CsHelpers.h  CsStatus.h
cslib/Allocators/: AllocatorConcepts.h  ConstructorNoexceptAllocator.h  RawKeeperAllocator.h
cslib/Allocators/AllocatorHelpers/: GenericAllocatorHelper.h
cslib/Containers/: HashMap.h  IteratorTagsDeclares.h  Vector.h
cslib/Include/: common_serialization.h
cslib/Serialization/: Context.h  ContextFlags.h  ContextMessage.h  CsProtocol.h  CsProtocolFlags.h  CsProtocolMessageType.h  CspBase.h  CspContext.h  CspFlags.h  CspLayers.h  CspMessageType.h  CspTraits.h  DeserializableTemp.h  ISerializable.h  Processing.h  ProcessingDataHelper.h  ProcessingDataProcessor.h  ProcessingSpecial.h  SerializableHandler.h  SerializableTemp.h  SerializationConcepts.h  SerializationDataHelper.h  SerializationFlags.h  SerializationProcessor.h  SerializationSpecialStructs.h  Traits.h
cslib/include/: CommonConcepts.h  CsHelpers.h  CsStatus.h  common_serialization.h
cslib/include/CSP/: Context.h  Traits.h  (+5 more)
cslib/std_equivalents/: new.h  std_equivalents.h
csp_base/: CMakeLists.txt
csp_base/unit_tests/: ISerializableAlignmentMayBeNotEqualTests.cpp  ISerializableAllowUnmanagedPointersTests.cpp  ISerializableAnotherBitness.cpp  ISerializableAnotherEndianness.cpp  ISerializableBasicModeTests.cpp  ISerializableCheckRecursivePointersTests.cpp  ISerializableInterfaceVersionsNotMatchTests.cpp  ISerializableMultiModesTests.cpp  ISerializableSimplyAssignableTagsOptimizationsAreTurnedOff.cpp  ISerializableSizeOfPrimitivesMayBeNotEqualTests.cpp
csp_messaging/: CMakeLists.txt
csp_messaging/unit_tests/: ClientTests.cpp  ComplexTests.cpp  Helpers.h  ServerTests.cpp  ToRefactorTests.cpp  helpers.h
csp_restricted_structs_processing/: CMakeLists.txt
csp_std_structs_processing/: CMakeLists.txt
csp_std_structs_processing/unit_tests/: MultiTests.cpp
memory_management/: CMakeLists.txt
memory_management/unit_tests/: NewReplacementsTests.cpp
memory_management_interfaces/: CMakeLists.txt
unit_tests_helper_libs/cs_tests_special_types/: CMakeLists.txt
unit_tests_helper_libs/tests_serializable_structs/: CMakeLists.txt  pch.h
unit_tests_helper_libs/tests_special_types/: CMakeLists.txt
(+687 files in other folders)
